--- a/MultiCommander.12.1.0.2906/multicommander.nuspec
+++ b/MultiCommander.12.1.0.2906/multicommander.nuspec
@@ -11,7 +11,10 @@
     <iconUrl>https://cdn.jsdelivr.net/gh/bibimagic/Mathias_Svensson-MultiCommander/MultiCommander.png</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <summary>Multi Commander is a multi-tabbed file manager and is an alternative to the standard Windows Explorer. It uses the very popular and efficient dual-panel layout.</summary>
-    <description>It has all the standard features that any file manager has, like copy, move, rename, view. But Multi Commander's big strengths are the special features that allow you to accomplish advanced tasks with ease. Tasks such as Auto-unpacking; Auto-sorting; Browsing inside archives; Editing the Windows Registry and accessing FTP; Searching for and Viewing files and pictures. There is also powerful, built-in Scripting support that allows you automate many tasks and expand its functionality. It allows you to do everything from the keyboard using shortcuts so that you can work quickly and efficiently.</description>
+    <description>It has all the standard features that any file manager has, like copy, move, rename, view. But Multi Commander's big strengths are the special features that allow you to accomplish advanced tasks with ease. Tasks such as Auto-unpacking; Auto-sorting; Browsing inside archives; Editing the Windows Registry and accessing FTP; Searching for and Viewing files and pictures. There is also powerful, built-in Scripting support that allows you automate many tasks and expand its functionality. It allows you to do everything from the keyboard using shortcuts so that you can work quickly and efficiently.
+	
+	Author's notes about virus detections : 
+	"VirusTotal" detections are false positives. Most applications that do a lot of file access like a file manager are often flagged. Some malware scanners see that this application is capable of doing a lot of different file access operations and wrongly consider it suspicious. Smaller developers unfortunately have to deal with this kind of setback.</description>
     <copyright>Mathias Svensson, Sweden</copyright>
 	<releaseNotes>This release contains a lot of changes over 350+ changes. Many are internal changes because of a large reorganization of code. But there are lots of fixes and some new features
 	Change in v12.0
